xee-xslt-ast/src/snapshots/xee_xslt_ast__parse__tests__simple_parse_if.snap
---
source: xee-xslt-ast/src/parse.rs
expression: parser.parse(node)
---
Ok(If(If(
  test: XPath(Expr([
    Path(PathExpr(
      steps: [
        PrimaryExpr(FunctionCall(FunctionCall(
          name: Name(
            name: "true",
            prefix: None,
            namespace: Some("http://www.w3.org/2005/xpath-functions"),
          ),
          arguments: [],
        ))),
      ],
    )),
  ])),
  content: [
    TextNode("Hello"),
  ],
)))
