xee-xslt-ast/src/snapshots/xee_xslt_ast__parse__tests__simple_parse_variable.snap
---
source: xee-xslt-ast/src/parse.rs
expression: parser.parse(node)
---
Ok(Variable(Variable(
  name: "foo",
  select: Some(XPath(Expr([
    Path(PathExpr(
      steps: [
        PrimaryExpr(FunctionCall(FunctionCall(
          name: Name(
            name: "true",
            prefix: None,
            namespace: Some("http://www.w3.org/2005/xpath-functions"),
          ),
          arguments: [],
        ))),
      ],
    )),
  ]))),
  as_: None,
  static_: None,
  visibility: None,
  content: [
    TextNode("Hello"),
  ],
)))
