xee-xslt-ast/src/snapshots/xee_xslt_ast__parse__tests__tokenize.snap
---
source: xee-xslt-ast/src/parse.rs
expression: tokens
---
[
  ElementStart(Name(
    namespace: "",
    localname: "if",
  ), {
    Name(
      namespace: "",
      localname: "test",
    ): "true()",
  }),
  Text("Hello"),
  ElementEnd(Name(
    namespace: "",
    localname: "if",
  )),
]
