xee-xslt-ast/src/snapshots/xee_xslt_ast__parse__tests__variable_visibility_abstract_with_select_is_error.snap
---
source: xee-xslt-ast/src/parse.rs
expression: "parse(r#\"<variable name=\"foo\" visibility=\"abstract\" select=\"true()\">Hello</variable>\"#)"
---
Err(AttributeUnexpected(
  namespace: "",
  local: "select",
  span: Span(
    start: 43,
    end: 49,
  ),
  message: "select attribute is not allowed when visibility is abstract",
))
